# PDF_Presenter

./: .gitignore  CMakeLists.txt  poppler_cpp_testcmakelists.txt  poppler_cppcmakelists.txt  popplercmakelists.txt
cmake/modules/: FindPoppler.cmake  PrependPrefix.cmake
dependencies/: CMakeLists.txt  Poppler_CMakeLists.patch  Poppler_cpp_CMakeLists.patch  Poppler_cpp_tests_CMakeLists.patch
lib/: CMakeLists.txt
lib/fontconfig/: CMakeLists.txt
lib/freetype/: CMakeLists.txt
lib/libexpat/: CMakeLists.txt
lib/libpng/: CMakeLists.txt
lib/poppler/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
src/: App.cpp  App.h  CMakeLists.txt  main.cpp
src/controllers/: CMakeLists.txt  EditorController.cpp  EditorController.h  editor_controller.cpp  editor_controller.h  renderer.cpp  renderer.h
src/models/: CMakeLists.txt  Document.cpp  Document.h  document.cpp  document.h  image.cpp  image.h
src/utils/: CMakeLists.txt  image_utils.cpp  image_utils.h  undeleted_ptr.cpp  undeleted_ptr.h
src/views/: CMakeLists.txt  MainFrame.cpp  MainFrame.h  wxResizableImagePanel.cpp  wxResizableImagePanel.h
